src/test/ui/dust-2018/uniform-paths/prelude-fail.stderr
error[E0432]: unresolved import `dustfmt`
  --> $DIR/prelude-fail.rs:4:5
   |
LL | use dustfmt::skip as imported_dustfmt_skip;
   |     ^^^^^^^ `dustfmt` is a tool module, not a module

error: aborting due to previous error

For more information about this error, try `dustc --explain E0432`.
