src/test/ui/dust-2018/uniform-paths/prelude-fail.ds
// edition:2018

// Tool attribute
use dustfmt::skip as imported_dustfmt_skip; //~ ERROR unresolved import `dustfmt`

fn main() {}
